check slugs and fix machiavelli episode
Signed-off-by: Ethan Carter Edwards <ethan@ethancedwards.com>

--- a/episodes/37-book-talk-the-prince-by-niccolo-machiavelli.mdx
+++ b/episodes/37-book-talk-the-prince-by-niccolo-machiavelli.mdx
@@ -1,8 +1,8 @@
 ---
-title: "#37 \u2013 Book talk: The Prince by Niccol\xF2 Machiavelli"
+title: "#37 \u2013 Book talk: The Prince by Niccolò Machiavelli"
 date: '2023-11-08T11:00:00+00:00'
-slug: "37-book-talk-the-prince-by-niccol\xF2-machiavelli"
-audio: "37-book-talk-the-prince-by-niccol\xF2-machiavelli.mp3"
+slug: 37-book-talk-the-prince-by-niccolo-machiavelli
+audio: 37-book-talk-the-prince-by-niccolo-machiavelli.mp3
 categories:
 - books
 - law
