remove multiline titles, some more encoding crap

--- a/episodes/102-sara-june-journalism-the-neighborly-farm-crisis-recovery-court-book-rural-life-kindness.mdx
+++ b/episodes/102-sara-june-journalism-the-neighborly-farm-crisis-recovery-court-book-rural-life-kindness.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#102 - Sara June: Journalism, The Neighborly, Farm Crisis, Recovery Court,\
-  \ Book, Rural Life, Kindness"
+title: "#102 - Sara June: Journalism, The Neighborly, Farm Crisis, Recovery Court, Book, Rural Life, Kindness"
 date: '2025-12-31T11:00:00+00:00'
 slug: 102-sara-june-journalism-the-neighborly-farm-crisis-recovery-court-book-rural-life-kindness
 categories:
