--- a/episodes/19-democratic-delegate-candidate-patty-quesenberry-broadband-housing-social-services-affirmative-action-unions-substance-abuse.mdx
+++ b/episodes/19-democratic-delegate-candidate-patty-quesenberry-broadband-housing-social-services-affirmative-action-unions-substance-abuse.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#19 - Democratic Delegate Candidate Patty Quesenberry: Broadband, Housing,\
-  \ Social Services, Affirmative Action, Unions, Substance Abuse"
+title: "#19 - Democratic Delegate Candidate Patty Quesenberry: Broadband, Housing, Social Services, Affirmative Action, Unions, Substance Abuse"
 date: '2023-07-05T11:30:00+00:00'
 slug: 19-democratic-delegate-candidate-patty-quesenberry-broadband-housing-social-services-affirmative-action-unions-substance-abuse
 categories:
