--- a/episodes/21-mark-harmon-sidna-allen-house-historical-society-teaching-history-england-museums-carroll-county.mdx
+++ b/episodes/21-mark-harmon-sidna-allen-house-historical-society-teaching-history-england-museums-carroll-county.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#21 - Mark Harmon: Sidna Allen House, Historical Society, Teaching, History,\
-  \ England, Museums, Carroll County"
+title: "#21 - Mark Harmon: Sidna Allen House, Historical Society, Teaching, History, England, Museums, Carroll County"
 date: '2023-07-20T11:30:00+00:00'
 slug: 21-mark-harmon-sidna-allen-house-historical-society-teaching-history-england-museums-carroll-county
 categories:
