--- a/episodes/22-race-recap-froggy-mountain-100-miler-ultramarathon-running-interviews-paul-tilley-rosie-gagnon-zach-coggins-andrew-harvey-adam-small.mdx
+++ b/episodes/22-race-recap-froggy-mountain-100-miler-ultramarathon-running-interviews-paul-tilley-rosie-gagnon-zach-coggins-andrew-harvey-adam-small.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#22 - Race Recap: Froggy Mountain 100 Miler, Ultramarathon, Running,\
-  \ Interviews, Paul Tilley, Rosie Gagnon, Zach Coggins, Andrew Harvey, Adam Small"
+title: "#22 - Race Recap: Froggy Mountain 100 Miler, Ultramarathon, Running, Interviews, Paul Tilley, Rosie Gagnon, Zach Coggins, Andrew Harvey, Adam Small"
 date: '2023-07-27T11:30:00+00:00'
 slug: 22-race-recap-froggy-mountain-100-miler-ultramarathon-running-interviews-paul-tilley-rosie-gagnon-zach-coggins-andrew-harvey-adam-small
 categories:
