--- a/episodes/31-bp-phil-hawks-clerk-of-circuit-court-candidate-education-ministry-history-america-public-speaking-republic-party-family.mdx
+++ b/episodes/31-bp-phil-hawks-clerk-of-circuit-court-candidate-education-ministry-history-america-public-speaking-republic-party-family.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#31 - B.P. \u201CPhil\u201D Hawks: Clerk of Circuit Court Candidate,\
-  \ Education, Ministry, History, America, Public Speaking, Republic Party, Family"
+title: "#31 - B.P. "Phil" Hawks: Clerk of Circuit Court Candidate, Education, Ministry, History, America, Public Speaking, Republic Party, Family"
 date: '2023-09-27T11:30:00+00:00'
 slug: 31-bp-phil-hawks-clerk-of-circuit-court-candidate-education-ministry-history-america-public-speaking-republic-party-family
 categories:
