--- a/episodes/38-election-recap-clerks-race-campaigns-polls-results-dinners-experiences.mdx
+++ b/episodes/38-election-recap-clerks-race-campaigns-polls-results-dinners-experiences.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#38 - Election Recap: Clerk\u2019s Race, Campaigns, Polls, Results, Dinners,\
-  \ Experiences"
+title: "#38 - Election Recap: Clerk's Race, Campaigns, Polls, Results, Dinners, Experiences"
 date: '2023-11-15T11:00:00+00:00'
 slug: 38-election-recap-clerks-race-campaigns-polls-results-dinners-experiences
 categories:
