--- a/episodes/4-c-jamie-edwards-husband-father-professor-counselor-prevention-specialist-wake-forest-wcc-appalachia-advice.mdx
+++ b/episodes/4-c-jamie-edwards-husband-father-professor-counselor-prevention-specialist-wake-forest-wcc-appalachia-advice.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#4 - C. Jamie Edwards: Husband, Father, Professor, Counselor, Prevention\
-  \ Specialist, Wake Forest, WCC, Appalachia, Advice"
+title: "#4 - C. Jamie Edwards: Husband, Father, Professor, Counselor, Prevention Specialist, Wake Forest, WCC, Appalachia, Advice"
 date: '2023-03-24T03:36:44+00:00'
 slug: 4-c-jamie-edwards-husband-father-professor-counselor-prevention-specialist-wake-forest-wcc-appalachia-advice
 categories:
