--- a/episodes/42-kevin-silvey-ultrarunning-art4healing-vitality-mental-health-self-love.mdx
+++ b/episodes/42-kevin-silvey-ultrarunning-art4healing-vitality-mental-health-self-love.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#42 - Kevin Silvey: Ultrarunning, Art4Healing, Vitality, Mental Health,\
-  \ Self-Love"
+title: "#42 - Kevin Silvey: Ultrarunning, Art4Healing, Vitality, Mental Health, Self-Love"
 date: '2023-12-14T10:00:00+00:00'
 slug: 42-kevin-silvey-ultrarunning-art4healing-vitality-mental-health-self-love
 categories:
