--- a/episodes/45-sam-bush-musician-bluegrass-grammys-mandolin-fiddle-singing-new-grass-revival.mdx
+++ b/episodes/45-sam-bush-musician-bluegrass-grammys-mandolin-fiddle-singing-new-grass-revival.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#45 - Sam Bush: Musician, Bluegrass, Grammys, Mandolin, Fiddle, Singing,\
-  \ New Grass Revival"
+title: "#45 - Sam Bush: Musician, Bluegrass, Grammys, Mandolin, Fiddle, Singing, New Grass Revival"
 date: '2024-01-03T10:00:00+00:00'
 slug: 45-sam-bush-musician-bluegrass-grammys-mandolin-fiddle-singing-new-grass-revival
 categories:
