--- a/episodes/48-allen-worrell-the-carroll-news-sports-journalism-early-career-stories-lessons-writing-history.mdx
+++ b/episodes/48-allen-worrell-the-carroll-news-sports-journalism-early-career-stories-lessons-writing-history.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#48 - Allen Worrell: The Carroll News, Sports, Journalism, Early Career,\
-  \ Stories, Lessons, Writing, History"
+title: "#48 - Allen Worrell: The Carroll News, Sports, Journalism, Early Career, Stories, Lessons, Writing, History"
 date: '2024-01-24T10:00:00+00:00'
 slug: 48-allen-worrell-the-carroll-news-sports-journalism-early-career-stories-lessons-writing-history
 categories:
