--- a/episodes/50-josh-deel-pbs-appalachia-hometowns-film-making-baseball-documentaries-entrepreneur.mdx
+++ b/episodes/50-josh-deel-pbs-appalachia-hometowns-film-making-baseball-documentaries-entrepreneur.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#50 - Josh Deel: PBS Appalachia, Hometowns, Film making, Baseball, Documentaries,\
-  \ Entrepreneur"
+title: "#50 - Josh Deel: PBS Appalachia, Hometowns, Film making, Baseball, Documentaries, Entrepreneur"
 date: '2024-02-07T10:00:00+00:00'
 slug: 50-josh-deel-pbs-appalachia-hometowns-film-making-baseball-documentaries-entrepreneur
 categories:
