--- a/episodes/55-seth-greer-navy-law-enforcement-football-strength-and-conditioning-nutrition-education.mdx
+++ b/episodes/55-seth-greer-navy-law-enforcement-football-strength-and-conditioning-nutrition-education.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#55 - Seth Greer: Navy, Law Enforcement, Football, Strength and Conditioning,\
-  \ Nutrition, Education"
+title: "#55 - Seth Greer: Navy, Law Enforcement, Football, Strength and Conditioning, Nutrition, Education"
 date: '2024-03-13T10:00:00+00:00'
 slug: 55-seth-greer-navy-law-enforcement-football-strength-and-conditioning-nutrition-education
 categories:
