--- a/episodes/6-sheriff-kevin-a-kemp-faith-singing-law-enforcement-work-ethic-election-platform-srosso-k-9-units-advice.mdx
+++ b/episodes/6-sheriff-kevin-a-kemp-faith-singing-law-enforcement-work-ethic-election-platform-srosso-k-9-units-advice.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#6 - Sheriff Kevin A. Kemp: Faith, singing, law enforcement, work ethic,\
-  \ election, platform, SRO/SSO, K-9 units, advice"
+title: "#6 - Sheriff Kevin A. Kemp: Faith, singing, law enforcement, work ethic, election, platform, SRO/SSO, K-9 units, advice"
 date: '2023-04-05T11:15:00+00:00'
 slug: 6-sheriff-kevin-a-kemp-faith-singing-law-enforcement-work-ethic-election-platform-srosso-k-9-units-advice
 categories:
