--- a/episodes/65-donna-ogle-literature-english-writing-college-education-cchs-wcc-communication.mdx
+++ b/episodes/65-donna-ogle-literature-english-writing-college-education-cchs-wcc-communication.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#65 - Donna Ogle: Literature, English, Writing, College, Education, CCHS,\
-  \ WCC, Communication"
+title: "#65 - Donna Ogle: Literature, English, Writing, College, Education, CCHS, WCC, Communication"
 date: '2024-05-22T10:00:00+00:00'
 slug: 65-donna-ogle-literature-english-writing-college-education-cchs-wcc-communication
 categories:
