--- a/episodes/7-clerk-gerald-goad-historical-society-archivist-genealogy-wcc-virginia-tech-advice.mdx
+++ b/episodes/7-clerk-gerald-goad-historical-society-archivist-genealogy-wcc-virginia-tech-advice.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#7 - Clerk Gerald Goad: Historical Society, archivist, genealogy, WCC,\
-  \ Virginia Tech, advice"
+title: "#7 - Clerk Gerald Goad: Historical Society, archivist, genealogy, WCC, Virginia Tech, advice"
 date: '2023-04-14T11:30:00+00:00'
 slug: 7-clerk-gerald-goad-historical-society-archivist-genealogy-wcc-virginia-tech-advice
 categories:
