--- a/episodes/70-chuck-thompson-education-principal-lung-transplant-story-family-gratitude.mdx
+++ b/episodes/70-chuck-thompson-education-principal-lung-transplant-story-family-gratitude.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#70 - Chuck Thompson: Education, Principal, Lung Transplant Story, Family,\
-  \ Gratitude"
+title: "#70 - Chuck Thompson: Education, Principal, Lung Transplant Story, Family, Gratitude"
 date: '2024-06-26T10:00:00+00:00'
 slug: 70-chuck-thompson-education-principal-lung-transplant-story-family-gratitude
 categories:
