--- a/episodes/81-josh-greer-amateur-radio-community-service-emergency-communications-digital-radio-satellites-antennas.mdx
+++ b/episodes/81-josh-greer-amateur-radio-community-service-emergency-communications-digital-radio-satellites-antennas.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#81 - Josh Greer: Amateur Radio, Community Service, Emergency Communications,\
-  \ Digital Radio, Satellites, Antennas"
+title: "#81 - Josh Greer: Amateur Radio, Community Service, Emergency Communications, Digital Radio, Satellites, Antennas"
 date: '2024-12-11T10:00:00+00:00'
 slug: 81-josh-greer-amateur-radio-community-service-emergency-communications-digital-radio-satellites-antennas
 categories:
