--- a/episodes/82-michael-farina-music-band-marching-percussion-education-drum-corps-concerts-art-culture.mdx
+++ b/episodes/82-michael-farina-music-band-marching-percussion-education-drum-corps-concerts-art-culture.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#82 - Michael Farina: Music, Band, Marching, Percussion, Education, Drum\
-  \ Corps, Concerts, Art, Culture"
+title: "#82 - Michael Farina: Music, Band, Marching, Percussion, Education, Drum Corps, Concerts, Art, Culture"
 date: '2024-12-26T10:00:00+00:00'
 slug: 82-michael-farina-music-band-marching-percussion-education-drum-corps-concerts-art-culture
 categories:
