--- a/episodes/86-dwayne-harmon-faith-family-life-haiti-mission-trip-hunting-fishing-harmon-luck-service.mdx
+++ b/episodes/86-dwayne-harmon-faith-family-life-haiti-mission-trip-hunting-fishing-harmon-luck-service.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#86 - Dwayne Harmon: Faith, Family, Life, Haiti Mission Trip, Hunting,\
-  \ Fishing, Harmon Luck, Service"
+title: "#86 - Dwayne Harmon: Faith, Family, Life, Haiti Mission Trip, Hunting, Fishing, Harmon Luck, Service"
 date: '2025-02-20T11:00:00+00:00'
 slug: 86-dwayne-harmon-faith-family-life-haiti-mission-trip-hunting-fishing-harmon-luck-service
 categories:
