--- a/episodes/88-oneofuscare-banquet-education-panel-mrs-dalton-dr-burnette-dr-mcbride-mr-carter.mdx
+++ b/episodes/88-oneofuscare-banquet-education-panel-mrs-dalton-dr-burnette-dr-mcbride-mr-carter.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#88 - OneofUs.Care Banquet Education Panel: Mrs. Dalton, Dr. Burnette,\
-  \ Dr. McBride, Mr. Carter"
+title: "#88 - OneofUs.Care Banquet Education Panel: Mrs. Dalton, Dr. Burnette, Dr. McBride, Mr. Carter"
 date: '2025-03-19T11:00:00+00:00'
 slug: 88-oneofuscare-banquet-education-panel-mrs-dalton-dr-burnette-dr-mcbride-mr-carter
 categories:
