--- a/episodes/90-steve-pottorff-cooperative-extension-agriculture-beekeeping-4-h-homemakers-association-ffa-bird-flu-rotary.mdx
+++ b/episodes/90-steve-pottorff-cooperative-extension-agriculture-beekeeping-4-h-homemakers-association-ffa-bird-flu-rotary.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#90 - Steve Pottorff: Cooperative Extension, Agriculture, Beekeeping,\
-  \ 4-H, Homemakers Association, FFA, Bird Flu, Rotary"
+title: "#90 - Steve Pottorff: Cooperative Extension, Agriculture, Beekeeping, 4-H, Homemakers Association, FFA, Bird Flu, Rotary"
 date: '2025-04-17T11:00:00+00:00'
 slug: 90-steve-pottorff-cooperative-extension-agriculture-beekeeping-4-h-homemakers-association-ffa-bird-flu-rotary
 categories:
