--- a/episodes/93-judge-brett-l-geisler-virginia-tech-law-school-family-education-law-judgeship-experience-lifestyle.mdx
+++ b/episodes/93-judge-brett-l-geisler-virginia-tech-law-school-family-education-law-judgeship-experience-lifestyle.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#93 - Judge Brett L. Geisler: Virginia Tech, Law School, Family, Education,\
-  \ Law, Judgeship, Experience, Lifestyle"
+title: "#93 - Judge Brett L. Geisler: Virginia Tech, Law School, Family, Education, Law, Judgeship, Experience, Lifestyle"
 date: '2025-05-29T11:00:00+00:00'
 slug: 93-judge-brett-l-geisler-virginia-tech-law-school-family-education-law-judgeship-experience-lifestyle
 categories:
