--- a/episodes/99-john-reid-republican-candidate-for-lieutenant-governor-politics-campaigning-platform-family.mdx
+++ b/episodes/99-john-reid-republican-candidate-for-lieutenant-governor-politics-campaigning-platform-family.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#99 - John Reid: Republican Candidate for Lieutenant Governor, Politics,\
-  \ Campaigning, Platform, Family"
+title: "#99 - John Reid: Republican Candidate for Lieutenant Governor, Politics, Campaigning, Platform, Family"
 date: '2025-09-03T11:00:00+00:00'
 slug: 99-john-reid-republican-candidate-for-lieutenant-governor-politics-campaigning-platform-family
 categories:
