--- a/episodes/10-jason-newman-taxidermy-military-korea-iraq-reintegration-deputy-sheriff-djing.mdx
+++ b/episodes/10-jason-newman-taxidermy-military-korea-iraq-reintegration-deputy-sheriff-djing.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#10 - Jason Newman: Taxidermy, Military, Korea, Iraq, Reintegration,\
-  \ Deputy Sheriff, DJ\u2019ing"
+title: "#10 - Jason Newman: Taxidermy, Military, Korea, Iraq, Reintegration, Deputy Sheriff, DJ'ing"
 date: '2023-05-02T11:30:00+00:00'
 slug: 10-jason-newman-taxidermy-military-korea-iraq-reintegration-deputy-sheriff-djing
 categories:
