--- a/episodes/15-john-bennardo-wheel-of-fortune-hollywood-afv-author-film-director-2-bill-just-a-typo-film-school.mdx
+++ b/episodes/15-john-bennardo-wheel-of-fortune-hollywood-afv-author-film-director-2-bill-just-a-typo-film-school.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#15 - John Bennardo: Wheel of Fortune, Hollywood, AFV, Author, Film Director,\
-  \ $2 Bill, Just a Typo, Film School"
+title: "#15 - John Bennardo: Wheel of Fortune, Hollywood, AFV, Author, Film Director, $2 Bill, Just a Typo, Film School"
 date: '2023-06-07T11:30:00+00:00'
 slug: 15-john-bennardo-wheel-of-fortune-hollywood-afv-author-film-director-2-bill-just-a-typo-film-school
 categories:
