--- a/episodes/20-paul-tilley-trucking-business-new-river-trail-outfitters-running-hiking-camping-born-to-run-ultramarathons-training.mdx
+++ b/episodes/20-paul-tilley-trucking-business-new-river-trail-outfitters-running-hiking-camping-born-to-run-ultramarathons-training.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#20 - Paul Tilley: Trucking, Business, New River Trail Outfitters, Running,\
-  \ Hiking, Camping, Born to Run, Ultramarathons, Training"
+title: "#20 - Paul Tilley: Trucking, Business, New River Trail Outfitters, Running, Hiking, Camping, Born to Run, Ultramarathons, Training"
 date: '2023-07-12T11:30:00+00:00'
 slug: 20-paul-tilley-trucking-business-new-river-trail-outfitters-running-hiking-camping-born-to-run-ultramarathons-training
 categories:
