--- a/episodes/23-deborah-renie-gates-democratic-state-senate-candidate-broadband-education-agriculture-speech-therapy-healthcare-platform.mdx
+++ b/episodes/23-deborah-renie-gates-democratic-state-senate-candidate-broadband-education-agriculture-speech-therapy-healthcare-platform.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#23 - Deborah Renie Gates: Democratic State Senate Candidate, Broadband,\
-  \ Education, Agriculture, Speech Therapy, Healthcare, Platform"
+title: "#23 - Deborah Renie Gates: Democratic State Senate Candidate, Broadband, Education, Agriculture, Speech Therapy, Healthcare, Platform"
 date: '2023-08-04T11:30:00+00:00'
 slug: 23-deborah-renie-gates-democratic-state-senate-candidate-broadband-education-agriculture-speech-therapy-healthcare-platform
 categories:
