--- a/episodes/29-tech-sergeant-nicholas-mcgaughey-air-force-reserve-boot-camp-tech-school-electrician-bonuses-gi-bill-college-recruiting.mdx
+++ b/episodes/29-tech-sergeant-nicholas-mcgaughey-air-force-reserve-boot-camp-tech-school-electrician-bonuses-gi-bill-college-recruiting.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#29 - Tech Sergeant Nicholas McGaughey: Air Force Reserve, Boot Camp,\
-  \ Tech School, Electrician, Bonuses, GI Bill, College, Recruiting"
+title: "#29 - Tech Sergeant Nicholas McGaughey: Air Force Reserve, Boot Camp, Tech School, Electrician, Bonuses, GI Bill, College, Recruiting"
 date: '2023-09-13T11:30:00+00:00'
 slug: 29-tech-sergeant-nicholas-mcgaughey-air-force-reserve-boot-camp-tech-school-electrician-bonuses-gi-bill-college-recruiting
 categories:
