--- a/episodes/3-kenzie-marshall-cptcnacoach-running-jrotc-bluefield-coaches-advice-faith.mdx
+++ b/episodes/3-kenzie-marshall-cptcnacoach-running-jrotc-bluefield-coaches-advice-faith.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#3 - Kenzie Marshall CPT/CNA/Coach: Running, JROTC, Bluefield, Coaches,\
-  \ Advice, Faith"
+title: "#3 - Kenzie Marshall CPT/CNA/Coach: Running, JROTC, Bluefield, Coaches, Advice, Faith"
 date: '2023-03-17T05:18:05+00:00'
 slug: 3-kenzie-marshall-cptcnacoach-running-jrotc-bluefield-coaches-advice-faith
 categories:
