--- a/episodes/32-curt-sumner-engineering-drafting-hard-work-history-schooling-professionalism-cte.mdx
+++ b/episodes/32-curt-sumner-engineering-drafting-hard-work-history-schooling-professionalism-cte.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#32 - Curt Sumner: Engineering, Drafting, Hard Work, History, Schooling,\
-  \ Professionalism, CTE"
+title: "#32 - Curt Sumner: Engineering, Drafting, Hard Work, History, Schooling, Professionalism, CTE"
 date: '2023-10-04T11:30:00+00:00'
 slug: 32-curt-sumner-engineering-drafting-hard-work-history-schooling-professionalism-cte
 categories:
