--- a/episodes/36-clerk-gerald-r-goad-campaign-responsibilities-achievements-goals-digitization-archives-licenses.mdx
+++ b/episodes/36-clerk-gerald-r-goad-campaign-responsibilities-achievements-goals-digitization-archives-licenses.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#36 - Clerk Gerald R. Goad: Campaign, Responsibilities, Achievements,\
-  \ Goals, Digitization, Archives, Licenses"
+title: "#36 - Clerk Gerald R. Goad: Campaign, Responsibilities, Achievements, Goals, Digitization, Archives, Licenses"
 date: '2023-11-01T11:00:00+00:00'
 slug: 36-clerk-gerald-r-goad-campaign-responsibilities-achievements-goals-digitization-archives-licenses
 categories:
