--- a/episodes/51-dwayne-yancey-founder-of-the-cardinal-news-the-roanoke-times-farming-swva-jmu-journalism.mdx
+++ b/episodes/51-dwayne-yancey-founder-of-the-cardinal-news-the-roanoke-times-farming-swva-jmu-journalism.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#51 - Dwayne Yancey: Founder of The Cardinal News, The Roanoke Times,\
-  \ Farming, SWVA, JMU, Journalism"
+title: "#51 - Dwayne Yancey: Founder of The Cardinal News, The Roanoke Times, Farming, SWVA, JMU, Journalism"
 date: '2024-02-14T10:00:00+00:00'
 slug: 51-dwayne-yancey-founder-of-the-cardinal-news-the-roanoke-times-farming-swva-jmu-journalism
 categories:
