--- a/episodes/56-shawn-montgomery-early-life-education-coaching-history-politics-government.mdx
+++ b/episodes/56-shawn-montgomery-early-life-education-coaching-history-politics-government.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#56 - Shawn Montgomery: Early Life, Education, Coaching, History, Politics,\
-  \ Government"
+title: "#56 - Shawn Montgomery: Early Life, Education, Coaching, History, Politics, Government"
 date: '2024-03-20T10:00:00+00:00'
 slug: 56-shawn-montgomery-early-life-education-coaching-history-politics-government
 categories:
