--- a/episodes/63-brandi-cochran-mitchell-basketball-cchs-hollins-education-coaching-history-athletics.mdx
+++ b/episodes/63-brandi-cochran-mitchell-basketball-cchs-hollins-education-coaching-history-athletics.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#63 - Brandi Cochran-Mitchell: Basketball, CCHS, Hollins, Education,\
-  \ Coaching, History, Athletics"
+title: "#63 - Brandi Cochran-Mitchell: Basketball, CCHS, Hollins, Education, Coaching, History, Athletics"
 date: '2024-05-08T10:00:00+00:00'
 slug: 63-brandi-cochran-mitchell-basketball-cchs-hollins-education-coaching-history-athletics
 categories:
