--- a/episodes/64-ethan-dalton-cchs-running-emory-and-henry-education-pre-law-friendships-advice.mdx
+++ b/episodes/64-ethan-dalton-cchs-running-emory-and-henry-education-pre-law-friendships-advice.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#64 - Ethan Dalton: CCHS, Running, Emory and Henry, Education, Pre-Law,\
-  \ Friendships, Advice"
+title: "#64 - Ethan Dalton: CCHS, Running, Emory and Henry, Education, Pre-Law, Friendships, Advice"
 date: '2024-05-15T10:00:00+00:00'
 slug: 64-ethan-dalton-cchs-running-emory-and-henry-education-pre-law-friendships-advice
 categories:
