--- a/episodes/68-patrick-sharp-coaching-basketball-running-biking-teaching-faith.mdx
+++ b/episodes/68-patrick-sharp-coaching-basketball-running-biking-teaching-faith.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#68 - Patrick Sharp: Coaching, Basketball, Running, Biking, Teaching,\
-  \ Faith"
+title: "#68 - Patrick Sharp: Coaching, Basketball, Running, Biking, Teaching, Faith"
 date: '2024-06-12T10:00:00+00:00'
 slug: 68-patrick-sharp-coaching-basketball-running-biking-teaching-faith
 categories:
