--- a/episodes/73-karen-baker-congress-judge-lawyer-nurse-democrat-activism-healthcare-broadband.mdx
+++ b/episodes/73-karen-baker-congress-judge-lawyer-nurse-democrat-activism-healthcare-broadband.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#73 - Karen Baker: Congress, Judge, Lawyer, Nurse, Democrat, Activism,\
-  \ Healthcare, Broadband"
+title: "#73 - Karen Baker: Congress, Judge, Lawyer, Nurse, Democrat, Activism, Healthcare, Broadband"
 date: '2024-08-21T10:00:00+00:00'
 slug: 73-karen-baker-congress-judge-lawyer-nurse-democrat-activism-healthcare-broadband
 categories:
