--- a/episodes/80-dr-darlene-vaughn-appalachia-history-culture-substance-use-treatment-addiction-development.mdx
+++ b/episodes/80-dr-darlene-vaughn-appalachia-history-culture-substance-use-treatment-addiction-development.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#80 - Dr. Darlene Vaughn: Appalachia, History, Culture, Substance Use,\
-  \ Treatment, Addiction, Development"
+title: "#80 - Dr. Darlene Vaughn: Appalachia, History, Culture, Substance Use, Treatment, Addiction, Development"
 date: '2024-11-27T10:00:00+00:00'
 slug: 80-dr-darlene-vaughn-appalachia-history-culture-substance-use-treatment-addiction-development
 categories:
