--- a/episodes/84-andrew-k-jennings-business-scholarship-podcast-legal-scholarship-academia-corporate-law-clerking-teaching.mdx
+++ b/episodes/84-andrew-k-jennings-business-scholarship-podcast-legal-scholarship-academia-corporate-law-clerking-teaching.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#84 - Andrew K. Jennings: Business Scholarship Podcast, Legal Scholarship,\
-  \ Academia, Corporate Law, Clerking, Teaching"
+title: "#84 - Andrew K. Jennings: Business Scholarship Podcast, Legal Scholarship, Academia, Corporate Law, Clerking, Teaching"
 date: '2025-01-23T10:00:00+00:00'
 slug: 84-andrew-k-jennings-business-scholarship-podcast-legal-scholarship-academia-corporate-law-clerking-teaching
 categories:
