--- a/episodes/89-greg-watson-secret-service-counterfeit-money-presidents-law-enforcement-north-korea-training.mdx
+++ b/episodes/89-greg-watson-secret-service-counterfeit-money-presidents-law-enforcement-north-korea-training.mdx
@@ -1,6 +1,5 @@
 ---
-title: "#89 - Greg Watson: Secret Service, Counterfeit Money, Presidents, Law\
-  \ Enforcement, North Korea, Training"
+title: "#89 - Greg Watson: Secret Service, Counterfeit Money, Presidents, Law Enforcement, North Korea, Training"
 date: '2025-04-03T10:35:51+00:00'
 slug: 89-greg-watson-secret-service-counterfeit-money-presidents-law-enforcement-north-korea-training
 categories:
