--- a/episodes/96-marion-harris-sports-education-coaching-faith-family-refereeing-star-wars.mdx
+++ b/episodes/96-marion-harris-sports-education-coaching-faith-family-refereeing-star-wars.mdx
@@ -18,41 +18,4 @@ In this episode, Ethan and Luke interview Mr. Marion Harris. During the intervie
 Thank you again Mr. Harris for being on the podcast.
 
 
-
-<strong>Podcast Information:</strong>
-
-
-
-Website: https://TheRidgePodcast.com
-
-
-
-Facebook: https://www.facebook.com/theridgepodcast
-
-
-
-Instagram: https://instagram.com/theridgepodcastinsta
-
-
-
-Bluesky: https://bsky.app/profile/theridgepodcast.com
-
-
-
-TikTok: https://www.tiktok.com/@theridgepodcast
-
-
-
-YouTube: https://youtube.com/@theridgepodcast
-
-
-
-Email: theridgepodcast@gmail.com
-
-
-
-Spotify: https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi
-
-
-
-Apple Podcasts: https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041
+<PodcastTrailer />
