replace Podcast Information: with podcast trailer
Signed-off-by: Ethan Carter Edwards <ethan@ethancedwards.com>

--- a/episodes/11-topic-talk-2-bill-documentary-and-book.mdx
+++ b/episodes/11-topic-talk-2-bill-documentary-and-book.mdx
@@ -35,32 +35,4 @@ Declaration of Independence painting: <a href="https://en.wikipedia.org/wiki/Dec
 
 
 
-<strong>Podcast Information:</strong>
-
-
-
-Website: <a href="https://TheRidgePodcast.com" rel="noreferrer noopener" target="_blank">https://TheRidgePodcast.com</a>
-
-
-
-RSS: <a href="https://TheRidgePodcast.com/feed/podcast" rel="noreferrer noopener" target="_blank">https://TheRidgePodcast.com/feed/podcast</a>
-
-
-
-Spotify: <a href="https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi" rel="noreferrer noopener" target="_blank">https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi</a>
-
-
-
-Apple Podcasts: <a href="https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041" rel="noreferrer noopener" target="_blank">https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041</a>
-
-
-
-Instagram: <a href="https://instagram.com/theridgepodcastinsta" rel="noreferrer noopener" target="_blank">https://instagram.com/theridgepodcastinsta</a>
-
-
-
-Email: <a href="mailto:theridgepodcast@gmail.com" rel="noreferrer noopener" target="_blank">theridgepodcast@gmail.com</a>
-
-
-
-YouTube: <a href="https://youtube.com/@theridgepodcast" rel="noreferrer noopener" target="_blank">https://youtube.com/@theridgepodcast</a>
+<PodcastTrailer />
