--- a/episodes/87-katie-mattox-21st-century-packhorse-library-ems-appalachia.mdx
+++ b/episodes/87-katie-mattox-21st-century-packhorse-library-ems-appalachia.mdx
@@ -32,40 +32,4 @@ Website: <a href="https://packhorselibrarians.org/">https://packhorselibrarians.
 
 
 
-<strong>Podcast Information:</strong>
-
-
-
-Website: <a href="https://TheRidgePodcast.com" rel="noreferrer noopener" target="_blank">https://TheRidgePodcast.com</a>
-
-
-
-Facebook: <a href="https://www.facebook.com/theridgepodcast" rel="noreferrer noopener" target="_blank">https://www.facebook.com/theridgepodcast</a>
-
-
-
-Instagram: <a href="https://instagram.com/theridgepodcastinsta" rel="noreferrer noopener" target="_blank">https://instagram.com/theridgepodcastinsta</a>
-
-
-
-Bluesky: <a href="https://bsky.app/profile/theridgepodcast.com">https://bsky.app/profile/theridgepodcast.com</a>
-
-
-
-TikTok: <a href="https://www.tiktok.com/@theridgepodcast">https://www.tiktok.com/@theridgepodcast</a>
-
-
-
-YouTube: <a href="https://youtube.com/@theridgepodcast" rel="noreferrer noopener" target="_blank">https://youtube.com/@theridgepodcast</a>
-
-
-
-Email: <a href="mailto:theridgepodcast@gmail.com" rel="noreferrer noopener" target="_blank">theridgepodcast@gmail.com</a>
-
-
-
-Spotify: <a href="https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi" rel="noreferrer noopener" target="_blank">https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi</a>
-
-
-
-Apple Podcasts: <a href="https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041" rel="noreferrer noopener" target="_blank">https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041</a>
+<PodcastTrailer />
