--- a/episodes/92-dave-white-christ-chapel-ministry-life-lessons-parenting-love-discipleship-peace.mdx
+++ b/episodes/92-dave-white-christ-chapel-ministry-life-lessons-parenting-love-discipleship-peace.mdx
@@ -24,40 +24,4 @@ Website: http://ccgalax.com/
 
 
 
-<strong>Podcast Information:</strong>
-
-
-
-Website: https://TheRidgePodcast.com
-
-
-
-Facebook: https://www.facebook.com/theridgepodcast
-
-
-
-Instagram: https://instagram.com/theridgepodcastinsta
-
-
-
-Bluesky: https://bsky.app/profile/theridgepodcast.com
-
-
-
-TikTok: https://www.tiktok.com/@theridgepodcast
-
-
-
-YouTube: https://youtube.com/@theridgepodcast
-
-
-
-Email: theridgepodcast@gmail.com
-
-
-
-Spotify: https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi
-
-
-
-Apple Podcasts: https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041
+<PodcastTrailer />
