--- a/episodes/39-treasurer-bonita-m-williams-early-life-taxes-campaigning-elections-misconceptions.mdx
+++ b/episodes/39-treasurer-bonita-m-williams-early-life-taxes-campaigning-elections-misconceptions.mdx
@@ -25,32 +25,4 @@ FAQ: <a href="https://carrollcountyva.gov/government/faq_s.php" rel="noreferrer 
 
 
 
-<strong>Podcast Information:</strong>
-
-
-
-Website: <a href="https://TheRidgePodcast.com" rel="noreferrer noopener" target="_blank">https://TheRidgePodcast.com</a>
-
-
-
-Spotify: <a href="https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi" rel="noreferrer noopener" target="_blank">https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi</a>
-
-
-
-Apple Podcasts: <a href="https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041" rel="noreferrer noopener" target="_blank">https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041</a>
-
-
-
-Facebook: <a href="https://www.facebook.com/theridgepodcast" rel="noreferrer noopener" target="_blank">https://www.facebook.com/theridgepodcast</a>
-
-
-
-Instagram: <a href="https://instagram.com/theridgepodcastinsta" rel="noreferrer noopener" target="_blank">https://instagram.com/theridgepodcastinsta</a>
-
-
-
-Email: <a href="mailto:theridgepodcast@gmail.com" rel="noreferrer noopener" target="_blank">theridgepodcast@gmail.com</a>
-
-
-
-YouTube: <a href="https://youtube.com/@theridgepodcast" rel="noreferrer noopener" target="_blank">https://youtube.com/@theridgepodcast</a>
+<PodcastTrailer />
