--- a/episodes/78-kathleen-simms-lyme-disease-ticks-treatment-ilads-research.mdx
+++ b/episodes/78-kathleen-simms-lyme-disease-ticks-treatment-ilads-research.mdx
@@ -37,40 +37,4 @@ Global Lyme Alliance: <a href="https://www.globallymealliance.org/">https://www.
 
 
 
-<strong>Podcast Information:</strong>
-
-
-
-Website: <a href="https://TheRidgePodcast.com" rel="noreferrer noopener" target="_blank">https://TheRidgePodcast.com</a>
-
-
-
-Facebook: <a href="https://www.facebook.com/theridgepodcast" rel="noreferrer noopener" target="_blank">https://www.facebook.com/theridgepodcast</a>
-
-
-
-Instagram: <a href="https://instagram.com/theridgepodcastinsta" rel="noreferrer noopener" target="_blank">https://instagram.com/theridgepodcastinsta</a>
-
-
-
-Twitter: <a href="https://twitter.com/theridgepodcast">https://twitter.com/theridgepodcast</a>
-
-
-
-TikTok: <a href="https://www.tiktok.com/@theridgepodcast">https://www.tiktok.com/@theridgepodcast</a>
-
-
-
-YouTube: <a href="https://youtube.com/@theridgepodcast" rel="noreferrer noopener" target="_blank">https://youtube.com/@theridgepodcast</a>
-
-
-
-Email: <a href="mailto:theridgepodcast@gmail.com" rel="noreferrer noopener" target="_blank">theridgepodcast@gmail.com</a>
-
-
-
-Spotify: <a href="https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi" rel="noreferrer noopener" target="_blank">https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi</a>
-
-
-
-Apple Podcasts: <a href="https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041" rel="noreferrer noopener" target="_blank">https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041</a>
+<PodcastTrailer />
