--- a/episodes/90-steve-pottorff-cooperative-extension-agriculture-beekeeping-4-h-homemakers-association-ffa-bird-flu-rotary.mdx
+++ b/episodes/90-steve-pottorff-cooperative-extension-agriculture-beekeeping-4-h-homemakers-association-ffa-bird-flu-rotary.mdx
@@ -27,40 +27,4 @@ Website: <a href="https://carroll.ext.vt.edu/">https://carroll.ext.vt.edu/</a>
 
 
 
-<strong>Podcast Information:</strong>
-
-
-
-Website: https://TheRidgePodcast.com
-
-
-
-Facebook: https://www.facebook.com/theridgepodcast
-
-
-
-Instagram: https://instagram.com/theridgepodcastinsta
-
-
-
-Bluesky: https://bsky.app/profile/theridgepodcast.com
-
-
-
-TikTok: https://www.tiktok.com/@theridgepodcast
-
-
-
-YouTube: https://youtube.com/@theridgepodcast
-
-
-
-Email: theridgepodcast@gmail.com
-
-
-
-Spotify: https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi
-
-
-
-Apple Podcasts: https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041
+<PodcastTrailer />
