--- a/episodes/91-sam-terry-agriculture-farming-virginia-tech-army-berlin-education-vocational-ed-cte-shopwork-rotary.mdx
+++ b/episodes/91-sam-terry-agriculture-farming-virginia-tech-army-berlin-education-vocational-ed-cte-shopwork-rotary.mdx
@@ -20,40 +20,4 @@ Thank you again Mr. Terry for being on the podcast.
 
 
 
-<strong>Podcast Information:</strong>
-
-
-
-Website: <a href="https://TheRidgePodcast.com">https://TheRidgePodcast.com</a>
-
-
-
-Facebook: <a href="https://www.facebook.com/theridgepodcast">https://www.facebook.com/theridgepodcast</a>
-
-
-
-Instagram: <a href="https://instagram.com/theridgepodcastinsta">https://instagram.com/theridgepodcastinsta</a>
-
-
-
-Bluesky: <a href="https://bsky.app/profile/theridgepodcast.com">https://bsky.app/profile/theridgepodcast.com</a>
-
-
-
-TikTok: <a href="https://www.tiktok.com/@theridgepodcast">https://www.tiktok.com/@theridgepodcast</a>
-
-
-
-YouTube: <a href="https://youtube.com/@theridgepodcast">https://youtube.com/@theridgepodcast</a>
-
-
-
-Email: <a href="mailto:theridgepodcast@gmail.com">theridgepodcast@gmail.com</a>
-
-
-
-Spotify: <a href="https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi">https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi</a>
-
-
-
-Apple Podcasts: <a href="https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041">https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041</a>
+<PodcastTrailer />
