--- a/episodes/94-brett-sexton-music-hard-work-fitness-martial-arts-health-education-technology-culture-faith.mdx
+++ b/episodes/94-brett-sexton-music-hard-work-fitness-martial-arts-health-education-technology-culture-faith.mdx
@@ -17,40 +17,4 @@ Thank you again Mr. Sexton for being on the podcast.
 
 
 
-<strong>Podcast Information:</strong>
-
-
-
-Website: https://TheRidgePodcast.com
-
-
-
-Facebook: https://www.facebook.com/theridgepodcast
-
-
-
-Instagram: https://instagram.com/theridgepodcastinsta
-
-
-
-Bluesky: https://bsky.app/profile/theridgepodcast.com
-
-
-
-TikTok: https://www.tiktok.com/@theridgepodcast
-
-
-
-YouTube: https://youtube.com/@theridgepodcast
-
-
-
-Email: theridgepodcast@gmail.com
-
-
-
-Spotify: https://open.spotify.com/show/2cKCltgfcCJjaipPQxKVGi
-
-
-
-Apple Podcasts: https://podcasts.apple.com/us/podcast/the-ridge-podcast/id1675395041
+<PodcastTrailer />
